Improve Stockhausen ideas

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -205,41 +205,47 @@ See also the 2\textsuperscript{nd} quote from last subsection (Flexible rhythm -
 \subsection{Stockhausen}
 \label{sub:eshtetic_stockhausen}
 
+Compared to Ligeti, Stockhausen explicitly count 4 characteristics of electronic compositions.
+His paper, ``The Concept of Unity in Electronic Music'' opens as following.
+
 \begin{MyShadequote}
   On several previous occasions, when I have been asked to explain the composition of electronic music, I have described four characteristics that seem important to me for electronic composition as distinguished from the composition of instrumental music:
 \end{MyShadequote}
+
+The titles of the next subsections, \ref{subs:stockhausen:time} -- \ref{subs:stockhausen:noise}, were copied directly from Stockhausen's paper.
+In each subsection I add clarification, based on the rest of the paper, as needed.
 
 \subsubsection{The correlation of the coloristic, harmonic-melodic, and metric-rhythmic aspects of composition}
 \label{subs:stockhausen:time}
 
 Most of the current paper by Stockhausen deals with this element.
-In my opinion, Stockhausen attitude toward the correlation between different compositional aspects could be put by the two following ideas:
+In my opinion, Stockhausen attitude toward the correlation between different compositional aspects could be described by two ideas.
 
 \begin{itemize}
-    \item He classify different sonic elements as different perceptions of the time domain.
+    \item He classifies different sonic elements as different perceptions of the time domain.
     For example, periodic elements of short time intervals are intercepted as pitch, and therefore as the basis for melody and harmony;
     Periodic elements of medium time interval are intercepted as tempo and rhythm;
-    Those of larger time intervals are seen as musical structure.
-    Furthermore, Stockhausen describe those ``time spans'' as spread across 7 octaves:
-    Pitch is spread across the 7 octaves of the piano;
-    Tempo and rhythm are spread from 1/16 of a second up to 8 seconds;
+    Those of larger time intervals supports the musical structure.
+    Furthermore, according to Stockhausen these ``time spans'' range across 7 octaves:
+    Pitch spread across the 7 octaves of the piano;
+    Tempo and rhythm range from 1/16 of a second up to 8 seconds;
     Lastly, time spans of 8 to 1024 seconds are intercepted as structural building blocks.
 
-    \item Based on the attitude described above Stockhausen approach electronic music as a tool to apply total serializm (TODO: {total serializm reference}).
-    Furthermore, he argues that serializm must exist in electronic composition.
-    The thinking path the led Stockhausen to this argument is clear, but it is still hard for me to agree with him.
+    \item Based on the above, Stockhausen approaches to electronic music as a tool for total serializm (TODO: {total serializm reference}).
+    Furthermore, he argues that serializm must exist in electronic composition, inherently.
+    The thinking path that led Stockhausen to this argument is clear, but it is still hard for me to agree with him.
     Later, I will try to confront this idea with those reflected in his and Ligeti's music.
 \end{itemize}
-
-Overall, I can not find a common ground between this compository element to those of Ligeti that were mentioned before.
-Their attitudes regarding unified perception of time are, most probably, contradicting.
 
 \subsubsection{The composition and de-composition of timbres}
 \label{subs:stockhausen:timber}
 
-Ligeti reference this ideas as following:
-Modification of timbre and dynamics are obviously very significant but the patterns emerging from them are even more important...
-I should say that the changes and modifications of the overall pattern are the important feature, not the tone colors. (Ligeti in conversation, p. 39).
+Ligeti also refer to this ideas:
+
+\begin{MyShadequote}
+  Modification of timbre and dynamics are obviously very significant but the patterns emerging from them are even more important...
+  I should say that the changes and modifications of the overall pattern are the important feature, not the tone colors. (Ligeti in conversation, p. 39).
+\end{MyShadequote}
 
 \subsubsection{The characteristic differentiation among degrees of intensity}
 \label{subs:stockhausen:intensity}
