Add 'Comparison' subsection to 'concepts'

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -261,6 +261,12 @@ main area to compare Ligeti and Stockhausen ideas TODO.
 \subsection{Koenig}
 \label{sub:eshtetic_koenig}
 
+\subsection{Comparison}
+
+TODO regarding the first concept by Stockhausen:
+Overall, I can not find a common ground between this compository element to those of Ligeti that were mentioned before.
+Their attitudes regarding unified perception of time are, most probably, contradicting.
+
 \section{Compositions}
 \label{sec:compositions}
 
