--- a/manuscript.tex
+++ b/manuscript.tex
@@ -261,6 +261,75 @@ main area to compare Ligeti and Stockhausen ideas TODO.
 \subsection{Koenig}
 \label{sub:eshtetic_koenig}
 
+``The Construction of Sound'' by Koenig (\cite*{koenig}) deals mainly with serial music and in different ways that serial decisions can be incorporated into electronic music.
+The current work explores aesthetics in electronic music.
+Thus, in this section I try to extract electronic music characteristics from the serial music context in which they are presented in the paper.
+As before, I quote from the original paper whenever possible and add my own clarifications only when necessary.
+
+\subsubsection{Sounds of limited vs. unlimited lengths}
+\label{subs:koenig:lengths}
+
+\begin{MyShadequote}
+  (Intrumental music characterized by) homogeneous, continuous sounds of limited lengths.
+  One might say that all classic categories of melodic formation, counterpoint, harmony, form and instrumentation have their origins in this manner of production.
+  (On the other hand), the length of electronically produced sound is theoretically unlimited...
+  The classic categories thus do not apply to electronic music;
+  at any rate they do not have their origins in the new material and the way in which it is produced (p. 1-2).
+\end{MyShadequote}
+
+\subsubsection{Non-stationary sounds}
+\label{subs:koenig:nonstationary}
+
+Koenig classify timbre into ``classes''.
+Both instrumental and electronic music share three classes of continuous sounds:
+Harmonic sound, which consists a fundamental; Noise sound, without fundamental; and impulses, which have no timbre nor fundamental.
+According to Koenig ``(for the three classes above) we have one timbre for each attack'' (p. 17).
+
+Electronic music enhances the timbre possibilities with another class:
+
+\begin{MyShadequote}
+ Electronic music also knows a family of non-stationary sounds with a duration, but no constant timbre...
+ Since their ``timbre'' is not constant, it can be described but not accurately imagined.
+ The movement of the timbre rather follows the compositional process of the micro-time range.
+ In this ways structures are composed instead of timbre (p. 18).
+\end{MyShadequote}
+
+\subsubsection{Sound as a formal event}
+\label{subs:koenig:event}
+
+\begin{MyShadequote}
+  The electronically produced sound does not have to be homogeneous and continuous.
+  One complete sound can consist of several individual components whose determinants may change in the next sound.
+  The sound is a closed unit and becomes a means of formation;
+  each sound characteristic becomes a formal event.
+  Instrumental music composes ``with'' sounds, electronic music composes sounds (p. 2).
+\end{MyShadequote}
+
+\subsubsection{Representation of pitch ranges}
+\label{subs:koenig:pitch_ranges}
+
+This paper deals mainly with serializm, and how it is applied to electronic music.
+The following idea came from this way of thinking, in serias, but I believe that it might by understood and analyzed even without considering serial decisions.
+Here, Koenig describe different ways to represent a pitch range.
+
+\begin{MyShadequote}
+  \begin{description}
+    \item[Pointillistically] - single pitches are used in such a way that the limits of the range are frequently touched.
+
+    \item[In planes] - the range is filled as continuously as possible...
+    The range as a whole is clear, since limits and interior are uniformly occupied.
+
+    \item[Articulated in planes] - the entire plane of the range is divided up into changing sections which in their turn can be either pointillist or planes:
+    pointillist as ``chords'', clusters of various sizes;
+    planes in the form of smaller planes within the larger one.
+
+    \item[Transition] - it is a simple matter to have a regular transition from planes to points if the plane is brought about by a rapid sequence of points by:
+    (a) slowing down the process,
+    or (b) reducing the number of layers step by step (p. 11).
+  \end{description}
+
+\end{MyShadequote}
+
 \subsection{Comparison}
 
 TODO regarding the first concept by Stockhausen:
