Structural changes, Stockhausen & Koenig compositions + research targets section and more

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -35,7 +35,7 @@
 \maketitle
 \tableofcontents
 
-\section{Introduction}
+\section{Introduction and targets}
 \label{sec:introduction}
 
 % Citations tests
@@ -87,9 +87,6 @@ Moreover, they all were in a similar stage of their career when they exposed to 
 These ideas deeply influenced their styles as composers (TODO cite).
 However, whereas Stockhausen and Koenig music is a direct continuation of these ideas, Ligeti music cannot be perceived as part of Darmstadt-Cologne style (TODO cite);
 his main repertoire is acoustic, and his works are usually not categorized as serial music.
-
-\section{Research Targets}  % Not sure that this is necessary
-\label{sec:research_targets}
 
 \section{Aesthetic Ideals in Electronic Music}
 \label{sec:aesthetic_ideals_in_electronic_music}
@@ -240,13 +237,6 @@ In my opinion, Stockhausen attitude toward the correlation between different com
 \subsubsection{The composition and de-composition of timbres}
 \label{subs:stockhausen:timber}
 
-Ligeti also refer to this ideas:
-
-\begin{MyShadequote}
-  Modification of timbre and dynamics are obviously very significant but the patterns emerging from them are even more important...
-  I should say that the changes and modifications of the overall pattern are the important feature, not the tone colors. (Ligeti in conversation, p. 39).
-\end{MyShadequote}
-
 \subsubsection{The characteristic differentiation among degrees of intensity}
 \label{subs:stockhausen:intensity}
 
@@ -336,43 +326,42 @@ TODO regarding the first concept by Stockhausen:
 Overall, I can not find a common ground between this compository element to those of Ligeti that were mentioned before.
 Their attitudes regarding unified perception of time are, most probably, contradicting.
 
-\section{Compositions}
-\label{sec:compositions}
+TODO regarding the 2nd concept by stockhausen:
+Ligeti also refer to this ideas:
 
-\subsection{Ligeti: Remifications}
-\label{sub:composition_ligeti}
+\begin{MyShadequote}
+  Modification of timbre and dynamics are obviously very significant but the patterns emerging from them are even more important...
+  I should say that the changes and modifications of the overall pattern are the important feature, not the tone colors. (Ligeti in conversation, p. 39).
+\end{MyShadequote}
+
+\section{Ligeti's Remifications}
+\label{sub:ramifications}
 
 Ligeti ideals and characteristics as found in Remifications.
 
-\subsubsection{Micropolyphony, flexible rhythm and misleading notation}
+\subsection*{Micropolyphony, flexible rhythm and misleading notation}
 
 This ideas are perhaps the most dominants in this composition.
 Examples can be found in the 0:00 - 1:55, 4:20 - 4:35, 5:28 - 6:25.
 
-\subsubsection{Machine like music / Meccanico-type}
+\subsection*{Machine like music / Meccanico-type}
 
 It appears to me that these idea could be counted together with the previous ones.
 On the other hand, some parts in Remifications are dominated by more ``machine-like'' characteristics than others.
 For example: 5:28 - 6:25, 7:00 - 8:00.
 
-\subsubsection{Hectic quality / Gesticulation / Deep-frozen expressionism}
+\subsection*{Hectic quality / Gesticulation / Deep-frozen expressionism}
 
 Gesticulated phrases appears in Remifications only for short periods, they are not characterize the composition as a hole.
 Nevertheless, we can note two ``overly exaggerated'' phrases, where the primer is a bit more distinct in that manner: 3:36 - 3:45, 6:28 - 6:40.
 One could argue that these are just dramatic phrases within the composition, but I suspect that this amount of vibrato in Ligeti's composition most present some decent amount of cynicism.
 TODO cite frigyesi to support this statement.
 
-\subsubsection{‘Mistiness’ to ‘clearing-up’ process}
+\subsection*{‘Mistiness’ to ‘clearing-up’ process}
 
 In my opinion this idea is the lessen distinct in this composition.
 This is probably because of the firm voice that accompanies any of the mictrotonal parts, while the ``mistiness'' microtonal is steady and is not ``clearing-up'' into an perfect interval.
 The most relevant parts I managed to find for this idea are: 1:40 - 2:08, 2:19 - 2:38.
-
-\subsection{Stockhausen: Gesang der J{\"u}nglinge}
-\label{sub:composition_stockhausen}
-
-\subsection{Koenig: TODO}
-\label{sub:composition_koenig}
 
 \section{General Discussion}
 \label{sec:general_discussion}
