Clearing and reordering existing Stockhausen ideas

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -207,46 +207,34 @@ His paper, ``The Concept of Unity in Electronic Music'' opens as following.
 
 \begin{MyShadequote}
   On several previous occasions, when I have been asked to explain the composition of electronic music, I have described four characteristics that seem important to me for electronic composition as distinguished from the composition of instrumental music:
+
+  \begin{itemize}
+    \item The correlation of the coloristic, harmonic-melodic, and metric-rhythmic aspects of composition
+    \item The composition and de-composition of timbres
+    \item The characteristic differentiation among degrees of intensity
+    \item The ordered relationships between sound and noise
+  \end{itemize}
+
+  Here, I would like to discuss only the correlation of timbre, pitch, intensity, and duration (p. 39).
 \end{MyShadequote}
 
-The titles of the next subsections, \ref{subs:stockhausen:time} -- \ref{subs:stockhausen:noise}, were copied directly from Stockhausen's paper.
-In each subsection I add clarification, based on the rest of the paper, as needed.
+Stockhausens's paper deals mainly with the 1\textsuperscript{st} point above.
+However, I will try to glean additional characteristics of electronic music from the paper as well.
 
-\subsubsection{The correlation of the coloristic, harmonic-melodic, and metric-rhythmic aspects of composition}
+\subsubsection{The correlation of timbre, pitch, intensity, and duration}
 \label{subs:stockhausen:time}
 
-Most of the current paper by Stockhausen deals with this element.
-In my opinion, Stockhausen attitude toward the correlation between different compositional aspects could be described by two ideas.
+Stockhausen classifies different sonic elements as different perceptions of the time domain, thus suggesting a unified time model electronic music.
+Periodic elements of short time intervals are intercepted as pitch, and therefore as the basis for melody and harmony;
+Periodic elements of medium time interval are intercepted as tempo and rhythm;
+Those of larger time intervals supports the musical structure.
+Furthermore, according to Stockhausen these ``time spans'' range across 7 octaves each:
+Pitch spread across the 7 octaves of the piano;
+Tempo and rhythm range from 1/16 of a second up to 8 seconds;
+Lastly, time spans of 8 to 1024 seconds are intercepted as structural building blocks.
 
-\begin{itemize}
-  \item He classifies different sonic elements as different perceptions of the time domain.
-  For example, periodic elements of short time intervals are intercepted as pitch, and therefore as the basis for melody and harmony;
-  Periodic elements of medium time interval are intercepted as tempo and rhythm;
-  Those of larger time intervals supports the musical structure.
-  Furthermore, according to Stockhausen these ``time spans'' range across 7 octaves:
-  Pitch spread across the 7 octaves of the piano;
-  Tempo and rhythm range from 1/16 of a second up to 8 seconds;
-  Lastly, time spans of 8 to 1024 seconds are intercepted as structural building blocks.
-
-  \item Based on the above, Stockhausen approaches to electronic music as a tool for total serializm (TODO: {total serializm reference}).
-  Furthermore, he argues that serializm must exist in electronic composition, inherently.
-  The thinking path that led Stockhausen to this argument is clear, but it is still hard for me to agree with him.
-  Later, I will try to confront this idea with those reflected in his and Ligeti's music.
-\end{itemize}
-
-\subsubsection{The composition and de-composition of timbres}
-\label{subs:stockhausen:timber}
-
-\subsubsection{The characteristic differentiation among degrees of intensity}
-\label{subs:stockhausen:intensity}
-
-I'm not sure I fully understand the meaning of this element, not from the current paper, at least.
-I will leave this element ``out of scope'' for now.
-
-\subsubsection{The ordered relationships between sound and noise}
-\label{subs:stockhausen:noise}
-
-main area to compare Ligeti and Stockhausen ideas TODO.
+Based on the above, Stockhausen approaches electronic music as a tool for total serializm (TODO total serializm reference).
+Furthermore, he argues that serializm must exist in electronic composition, inherently.
 
 \subsection{Koenig}
 \label{sub:eshtetic_koenig}
