Complete Stockhausens' concepts

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -236,6 +236,30 @@ Lastly, time spans of 8 to 1024 seconds are intercepted as structural building b
 Based on the above, Stockhausen approaches electronic music as a tool for total serializm (TODO total serializm reference).
 Furthermore, he argues that serializm must exist in electronic composition, inherently.
 
+\subsubsection{Lower level building blocks for electronic sound}
+\label{subs:stockhausen:sound}
+
+\begin{MyShadequote}
+  A musical composition is no more than a temporal ordering of sound events, just as each sound event in a composition is a temporal ordering of pulses.
+  It is only a question of the point at which composition begins:
+  in composing for instruments whose sounds are predetermined, a composer need not be concerned with these problems.
+  On the other hand, in electronic music, one can either compose each sound directly in terms of its wave succession, of, finally, each individual sound wave may be determined in terms of its actual vibration, by and ordering of the succession of pulses (p. 41).
+\end{MyShadequote}
+
+\begin{MyShadequote}
+  One would not proceed from sound properties that had already been experienced and then allow these to determine temporal variations;
+  instead, one would compose the temporal arrangements of pulses themselves, and discover their resultant sound properties experimentally (p. 42).
+\end{MyShadequote}
+
+\subsubsection{Noise}
+\label{subs:stockhausen:noise}
+
+Stockhausen notes that in traditional instrumental music harmony and melody are always based on whole-number divisions of pitches.
+Therefor, ``indicating the necessity of excluding noise from this kind of music'' (\cite[p. 47]{stockhausen}).
+This idea shifts naturally to rhythm, and from there, similarly, to form and structure.
+
+Referring back to Stockhausen first concept (in section \ref{subs:stockhausen:time}), a unified model for time in music solves the above by introducing ``noise'' in all different ranges of the time domain -- from timbre to form.
+
 \subsection{Koenig}
 \label{sub:eshtetic_koenig}
 
