Revisiting sections 2 and 3. Improvements

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -85,7 +85,7 @@ a technique that characterized the already established style of Parisian electro
 The three composers that the current work is about --- Ligeti, Stockhausen and Koenig --- found themselves, each one in its own way, taking part in the Darmstadt-Cologne scene during the 1950\textsuperscript{s}.
 Moreover, they all were in a similar stage of their career when they exposed to the ideas presented in the summer courses and the techniques used in the electronic music studios.
 These ideas deeply influenced their styles as composers (TODO cite).
-However, whereas Stockhausen and Koenig music is a direct continuation of these ideas, Ligeti music cannot be perceived as part of Darmstadt-Cologne style (TODO cite);
+However, whereas Stockhausen and Koenig musical styles are direct continuations of these ideas, Ligeti's music cannot be perceived as part of Darmstadt-Cologne style (TODO cite);
 his main repertoire is acoustic, and his works are usually not categorized as serial music.
 
 \section{Aesthetic Ideals in Electronic Music}
@@ -93,24 +93,25 @@ his main repertoire is acoustic, and his works are usually not categorized as se
 
 In this section I analyze musical concepts as described in \textbf{written materials} by the three composers.
 For each composer I analyze one written source:
-for Ligeti, I analyze ``Ligeti in conversation'' --- an interview that was conducted by Peter Varnai in 1983 (\cite{varnai});
-for Stockhausen, I analyze his 1962 paper ``The concept of unity in electronic music'' (\cite{stockhausen});
-and for Koenig, I analyze his 1963 paper ``The Construction of Sound'' (\cite{koenig}).
+for Ligeti, I analyze ``Ligeti in conversation'' --- an interview that was conducted by Peter Varnai in 1983 (\citeauthor{varnai});
+for Stockhausen, I analyze his 1962 paper ``The concept of unity in electronic music'' (\citeauthor{stockhausen});
+and for Koenig, I analyze his 1963 paper ``The Construction of Sound'' (\citeauthor{koenig}).
 
 This work deals with aesthetics of electronic music, hence the decision to choose these papers by Stockhausen and Koenig is trivial.
 On the other hand, for Ligeti I choose a source with broader perspective, as his music is usually not categorized as electronic.
-Varnai's interview of Ligeti presents a comprehensive set of ideas behind Ligeti's composition style, and I found it useful as a basis to compare the musical concepts with.
+Varnai's interview of Ligeti presents a comprehensive set of ideas behind Ligeti's musical style, and I found it useful as a basis to compare the musical concepts with.
+
+Some of the hereby presented concepts are my summaries to the ideas found in the written materials, whereas others are quoted directly from the source.
+For those, I add clarification only when absolutely necessary, as I think that most of the concepts are relatively self-explanatory.
 
 Later in this section I will compare these ideas, and search for similarities and differences between them.
-A unified understanding of the different ideas by the different composers will be used to analyze their music in the next section.
+A unified understanding of the different ideas by the different composers will be used in the next section to analyze  Ligeti's Ramifications.
 
 \subsection{Ligeti}
 \label{sub:eshtetic_ligeti}
 
-The following is a curated list musical concepts that I have collected from Ligeti's interview.
-Ligeti was not list his concepts explicitly, hence the categorization is done by me and is also subjective.
-The description of each concept is quoted directly from the interview.
-I add additional clarification only when absolutely necessary, as I think that the concepts are relatively self-explanatory.
+The following is a curated list of musical concepts that I have collected from Ligeti's interview.
+Ligeti was not listed his concepts explicitly, hence the categorization is done by me and is also subjective.
 
 \subsubsection{Hectic quality / Gesticulation / Deep-frozen expressionism}
 \label{subs:ligeti:hectic}
@@ -224,7 +225,7 @@ However, I will try to glean additional characteristics of electronic music from
 \subsubsection{The correlation of timbre, pitch, intensity, and duration}
 \label{subs:stockhausen:time}
 
-Stockhausen classifies different sonic elements as different perceptions of the time domain, thus suggesting a unified time model electronic music.
+Stockhausen classifies different sonic elements as different perceptions of the time domain, thus suggesting a unified time model for electronic music.
 Periodic elements of short time intervals are intercepted as pitch, and therefore as the basis for melody and harmony;
 Periodic elements of medium time interval are intercepted as tempo and rhythm;
 Those of larger time intervals supports the musical structure.
@@ -243,7 +244,7 @@ Furthermore, he argues that serializm must exist in electronic composition, inhe
   A musical composition is no more than a temporal ordering of sound events, just as each sound event in a composition is a temporal ordering of pulses.
   It is only a question of the point at which composition begins:
   in composing for instruments whose sounds are predetermined, a composer need not be concerned with these problems.
-  On the other hand, in electronic music, one can either compose each sound directly in terms of its wave succession, of, finally, each individual sound wave may be determined in terms of its actual vibration, by and ordering of the succession of pulses (p. 41).
+  On the other hand, in electronic music, one can either compose each sound directly in terms of its wave succession, or, finally, each individual sound wave may be determined in terms of its actual vibration, by an ordering of the succession of pulses (p. 41).
 \end{MyShadequote}
 
 \begin{MyShadequote}
@@ -266,7 +267,6 @@ Referring back to Stockhausen first concept (in section \ref{subs:stockhausen:ti
 ``The Construction of Sound'' by Koenig (\cite*{koenig}) deals mainly with serial music and in different ways that serial decisions can be incorporated into electronic music.
 The current work explores aesthetics in electronic music.
 Thus, in this section I try to extract electronic music characteristics from the serial music context in which they are presented in the paper.
-As before, I quote from the original paper whenever possible and add my own clarifications only when necessary.
 
 \subsubsection{Sounds of limited vs. unlimited lengths}
 \label{subs:koenig:lengths}
