Modify some concenpts titles. Get ready to comparizon diagram

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -237,7 +237,7 @@ Lastly, time spans of 8 to 1024 seconds are intercepted as structural building b
 Based on the above, Stockhausen approaches electronic music as a tool for total serializm (TODO total serializm reference).
 Furthermore, he argues that serializm must exist in electronic composition, inherently.
 
-\subsubsection{Lower level building blocks for electronic sound}
+\subsubsection{Lower level building blocks}
 \label{subs:stockhausen:sound}
 
 \begin{MyShadequote}
@@ -268,7 +268,7 @@ Referring back to Stockhausen first concept (in section \ref{subs:stockhausen:ti
 The current work explores aesthetics in electronic music.
 Thus, in this section I try to extract electronic music characteristics from the serial music context in which they are presented in the paper.
 
-\subsubsection{Sounds of limited vs. unlimited lengths}
+\subsubsection{Sounds of unlimited lengths}
 \label{subs:koenig:lengths}
 
 \begin{MyShadequote}
