Add concepts categorization diagram

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -3,6 +3,8 @@
 \renewcommand*{\nameyeardelim}{\addcomma\space}  % add comma between author and year
 \setcounter{tocdepth}{2}  % Exclude subsubsections from table of content
 
+\usepackage{graphicx}
+
 % -------- Quoting ------------
 \usepackage{mdframed}
 \usepackage{xcolor}
@@ -333,6 +335,14 @@ Here, Koenig describe different ways to represent a pitch range.
 \end{MyShadequote}
 
 \subsection{Comparison}
+
+\begin{figure}[!htb]
+  \centering
+  \textbf{Categorization of ideas}\par\medskip
+  \includegraphics[width=\linewidth]{graphics/concepts_categorization.pdf}
+  \caption{Subjective categorization of ideas to sound, serializm and high level expressions.}
+  \label{fig:concepts_categorization}
+\end{figure}
 
 TODO regarding the first concept by Stockhausen:
 Overall, I can not find a common ground between this compository element to those of Ligeti that were mentioned before.
