Complete comparison of ideas

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -344,17 +344,43 @@ Here, Koenig describe different ways to represent a pitch range.
   \label{fig:concepts_categorization}
 \end{figure}
 
-TODO regarding the first concept by Stockhausen:
-Overall, I can not find a common ground between this compository element to those of Ligeti that were mentioned before.
-Their attitudes regarding unified perception of time are, most probably, contradicting.
+Generally, I found that most of the ideas above can be divided easily into three categories --- sound, serial thinking, and higher level expressions --- as shown in Figure \ref{fig:concepts_categorization}.
 
-TODO regarding the 2nd concept by stockhausen:
-Ligeti also refer to this ideas:
+The most prominent category in the composers writings is, perhaps, sound.
+Both Stockhausen and Koenig count several characteristics of electronic sound which differ them from instrumental music.
+Ligeti, on the other hand, composes mainly instrumental music but use very similar terminology to describe the sound he is looking for.
+I think that Koenig description of non-stationary sounds in electronic music (see subsection \ref{subs:koenig:nonstationary}) may be used as a superset for all of the other concepts presented in this category.
+The ``densely woven cobweb'', ``floating, fluctuating patterns'', and ``dirty smudginess'' of Ligeti are very similar to Stockhausen's ``ordering of the succession of pulses'' and Koenig's ``micro-time movement of timbre''.
+
+It is important to note though that Ligeti's interest in the modification of timbre should be understood as part of a larger context.
 
 \begin{MyShadequote}
   Modification of timbre and dynamics are obviously very significant but the patterns emerging from them are even more important...
-  I should say that the changes and modifications of the overall pattern are the important feature, not the tone colors. (Ligeti in conversation, p. 39).
+  I should say that the changes and modifications of the overall pattern are the important feature, not the tone colors. (\cite[p. 39]{varnai}).
 \end{MyShadequote}
+
+The same might be applied to Stockhausen and Koenig as well, whereas the larger context is the serial way of thinking the modification of timbre is part of.
+Serial aesthetics in electronic music is beyond the scope of the current work, thereby I will refrain from answering that question.
+
+The second category I found is serializm.
+As mentioned earlier, I will not deal directly with serializm in the current work.
+However, there are some concepts that are rooted in serial way of thinking that can be generalized and understood by themselves.
+Concepts like these, despite their problematic source, are not ignored and will be analyzed in the next section.
+This category is probably the most foreign one to Ligeti's way of thinking.
+Moreover, it seems that a unified model of time, as described by Stockhausen, contradict much of Ligetis' concepts from the next category.
+
+The last category is the one for higher level expressions, and is occupied almost solely by Ligetis' ideas.
+These concepts based on expressions and feelings, and are characterized by descriptions that are not musical in their nature.
+
+Two concept are not categorized simply into these three categories.
+Noise, for example, as described by Stockhausen, can be understood in every time range;
+e.g. both as a property of the sound itself, as well as of rhythm or form.
+In that regard, this idea is belong both to sound and to serial thinking, as it emerged from Stockhausen unified model of time.
+In the next section I will try to refer to this concepts in different time ranges.
+
+The last concept is the representation of pitch ranges.
+It is clearly a serial concept, but part of it, especially the ``transitional'' representation, remind me the ``Mistiness'' to ``clearing-up'' process of Ligeti.
+Extract this idea from its serial way of thinking, and it can be seen as a very expressive description of relationships between ``planes'' of sounds and melodies, including intermediate states.
 
 \section{Ligeti's Remifications}
 \label{sub:ramifications}
